# agent-work

./: .gitignore  CLAUDE.md  README.md  grvt_client.py  pyproject.toml
.claude/agents/: binance-ohlcv-fetcher.md
.claude/skills/task-decomposer/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
analyses/00_to_be_started/: 20251209_vegetable_price_food_sector.md
binance/: fetch_binance_data.py  main.py  pyproject.toml
binance/data/: BTCUSDT_1d_2025-02-11_2026-02-11.csv  ETHUSDT_1d_2025-02-11_2026-02-11.csv
docs/knowledges/: 20260221_binance_ddd_review.md
docs/plans/: 01_bybit.md  02_okx.md  03_kraken.md  04_upbit.md  05_coinbase.md  06_phemex.md  07_bitget.md
docs/tasks/: binance-csv-export.md  fetch-x-bookmarks.md
learn/ddd/: plan.md
learn/ddd/day01/: README.md
learn/ddd/day02/: README.md  exercises.md
learn/ddd/day03/: README.md  exercises.md
learn/ddd/day04/: README.md  exercises.md
learn/ddd/day05/: README.md  exercises.md
scripts/: export_binance_data.py  export_data.py  fetch_binance_data.py  save_x_bookmarks.py  x_oauth2_refresh.py  x_oauth2_token.py
src/binance_client/: __init__.py  base.py  futures.py
src/market_data/: __init__.py
tests/: test_binance_client.py  test_binance_source.py  test_bybit_source.py  test_coinbase_source.py  test_domain_models.py  test_export_binance_data.py  test_export_data.py  test_http_client.py  test_kraken_source.py  test_okx_source.py  test_phemex_source.py  test_upbit_source.py
x/: .gitignore  fetch_bookmarks.py  grok_context_research.py  main.py  pyproject.toml
(+34 files in other folders)
