[project]
name = "crypto-analysis"
version = "0.1.0"
description = "暗号資産取引の分析ワークスペース"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "duckdb>=1.1.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "xdk>=0.8.1",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
